<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ScoreboardActivity">

    <TextView
        android:id="@+id/textPointsForSets"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/points_for_sets"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
        android:textSize="24sp"
        android:layout_marginTop="32dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textValuePointsForSets"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
        android:textSize="24sp"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@id/textPointsForSets"
        app:layout_constraintStart_toStartOf="@id/textPointsForSets"
        app:layout_constraintEnd_toEndOf="@id/textPointsForSets"
        tools:text="0"/>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/linearLayoutPairA"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center_horizontal"
        android:layout_marginTop="48dp"
        app:layout_constraintTop_toBottomOf="@id/textValuePointsForSets"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/divider">

        <TextView
            android:id="@+id/textNamesPairA"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/pair_a"
            android:gravity="center"
            android:textSize="24sp"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"/>

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sets"
                android:textSize="18sp"
                android:layout_marginEnd="8dp"/>

            <TextView
                android:id="@+id/textSetsA"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/number_zero"
                android:textSize="18sp" />

        </androidx.appcompat.widget.LinearLayoutCompat>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/points"
            android:textSize="18sp"
            android:layout_marginTop="24dp"/>

        <TextView
            android:id="@+id/textScoreA"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/number_zero"
            android:textSize="18sp"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/buttonAddA"
            android:layout_width="48dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:text="@string/plus_signal"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/buttonLessA"
            android:layout_width="48dp"
            android:layout_height="wrap_content"
            android:text="@string/minus_signal"/>

    </androidx.appcompat.widget.LinearLayoutCompat>


    <View
        android:id="@+id/divider"
        android:layout_width="1dp"
        android:layout_height="300dp"
        android:layout_marginTop="48dp"
        android:background="?android:attr/listDivider"
        app:layout_constraintStart_toEndOf="@id/linearLayoutPairA"
        app:layout_constraintTop_toBottomOf="@id/textValuePointsForSets" />

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/linearLayoutPairB"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center_horizontal"
        android:layout_marginTop="48dp"
        app:layout_constraintTop_toBottomOf="@id/textValuePointsForSets"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/divider">

        <TextView
            android:id="@+id/textNamesPairB"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/pair_b"
            android:gravity="center"
            android:textSize="24sp"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"/>

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sets"
                android:textSize="18sp"
                android:layout_marginEnd="8dp"/>

            <TextView
                android:id="@+id/textSetsB"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/number_zero"
                android:textSize="18sp" />


        </androidx.appcompat.widget.LinearLayoutCompat>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/points"
            android:textSize="18sp"
            android:layout_marginTop="24dp"/>

        <TextView
            android:id="@+id/textScoreB"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/number_zero"
            android:textSize="18sp"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/buttonAddB"
            android:layout_width="48dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:text="@string/plus_signal"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/buttonLessB"
            android:layout_width="48dp"
            android:layout_height="wrap_content"
            android:text="@string/minus_signal"/>

    </androidx.appcompat.widget.LinearLayoutCompat>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/buttonResetSets"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_reset_sets"
        android:textAllCaps="false"
        android:layout_marginTop="32dp"
        app:layout_constraintTop_toBottomOf="@id/divider"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/buttonResetPoints"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_reset_points"
        android:textAllCaps="false"
        app:layout_constraintTop_toBottomOf="@id/buttonResetSets"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>